--- a/Rainbow/index.html
+++ b/Rainbow/index.html
@@ -75,8 +75,7 @@
             </li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#team">Team</a></li>
+            <li><a href="#products">Products</a></li>
             <!-- <li><a href="blog.html">Blog</a></li> -->
             <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
@@ -801,11 +800,11 @@
       <!-- /Faq Section -->
 
       <!-- Portfolio Section -->
-      <section id="portfolio" class="portfolio section">
+      <section id="products" class="portfolio section">
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
-          <h2>Portfolio</h2>
-          <p>Check our latest work</p>
+          <h2>Our Products</h2>
+          <p>Explore our range of mattresses, pillows, and bedding</p>
         </div>
         <!-- End Section Title -->
 
@@ -1383,8 +1382,7 @@
           <div class="col-lg-4 col-md-12">
             <h4>Follow Us</h4>
             <p>
-              Cras fermentum odio eu feugiat lide par naso tierra videa magna
-              derita valies
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores atque hic repudiandae laudantium iusto ex optio distinctio dolore veniam vero?
             </p>
             <div class="social-links d-flex">
               <a href=""><i class="bi bi-twitter-x"></i></a>
