--- a/Rainbow/index.html
+++ b/Rainbow/index.html
@@ -126,7 +126,7 @@
               </div>
             </div>
             <div
-              class="col-lg-6 order-1 order-lg-2 hero-img d-none"
+              class="col-lg-6 order-1 order-lg-2 hero-img"
               data-aos="zoom-out"
             >
               <img
